# autolens-au

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  STATUS.md  autolens_au_roadmap.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/dbt/: profiles.yml
.github/dbt-snowflake/: profiles.yml
.github/workflows/: ci.yml  delivery.yml  deployment_health.yml  monthly_refresh.yml
config/: database.py  settings.py
dbt_autolens/: dbt_project.yml  profiles.yml.example
dbt_autolens/macros/: regex_matches.sql
dbt_autolens/models/core/: dim_date.sql  dim_location.sql  dim_vehicle.sql  dim_year.sql  fact_listing.sql  schema.yml
dbt_autolens/models/staging/: schema.yml  stg_bitre_vehicle_makes.sql  stg_economic_context.sql  stg_fuel_prices.sql  stg_listings.sql  stg_qld_registrations.sql  stg_rba_cash_rate.sql
dbt_autolens/seeds/: raw_bitre_vehicle_makes.csv  raw_cpi.csv  raw_fuel_prices.csv  raw_listings.csv  raw_qld_registration_activity.csv  raw_qld_registrations.csv  raw_rba_cash_rate.csv
dbt_autolens/tests/custom/: test_price_outliers.sql
docs/: AI_DELIVERY_LOG.md  CHANGELOG.md  DATA_DICTIONARY.md  DEPLOYMENT_STREAMLIT.md  MODEL_CARD.md  MONITORING.md  SNOWFLAKE.md
docs/operations/: latest_refresh.json
great_expectations/: great_expectations.yml
great_expectations/expectations/: listings_suite.json
infra/snowflake/: app_service_user.sql  bootstrap.sql  resource_monitor.sql
scripts/: check_deployment_health.py  check_snowflake_ingest.py  run_pipeline.py  setup_database.py  train_model.py  write_refresh_status.py
src/: __init__.py
src/api/: __init__.py  main.py  schemas.py  valuation_engine.py
src/dashboard/: app.py  data_access.py  formatting.py  release_artifacts.py  runtime.py
src/dashboard/components/: charts.py
src/dashboard/pages/: 1_instant_valuation.py  2_depreciation_explorer.py  3_market_monitor.py  4_data_quality.py
src/ingestion/: __init__.py  abs_economic.py  bitre_vehicles.py  kaggle_loader.py  nsw_fuelcheck.py  qld_registrations.py
src/models/: __init__.py  depreciation.py  evaluation.py  hedonic_model.py  residual_value.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_dashboard.py  test_data_quality.py  test_database_config.py  test_deployment_health.py  test_depreciation.py  test_hedonic_model.py  test_ingestion.py  test_model_artifact.py  test_reference_sources.py  test_refresh_status.py  test_release_artifacts.py  test_run_pipeline.py
