[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autolens-au"
version = "0.1.0"
description = "Australian Vehicle Pricing & Residual Value Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Osman Orka", email = "ozzy2438@users.noreply.github.com"}
]

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "shap==0.49.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "snowflake-sqlalchemy>=1.11.0",
    "cryptography>=42.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
    "kaggle>=1.5.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff==0.15.21",
    "mypy==1.19.1",
    "pre-commit>=3.4.0",
]

dbt = [
    "dbt-core==1.11.12",
    "dbt-postgres==1.10.2",
    "dbt-snowflake>=1.10.6,<1.11",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"config/settings.py" = ["S104", "S105"]
"src/api/main.py" = ["S104"]
# Streamlit entry scripts must adjust sys.path and bridge secrets before the
# `src.` imports, so module-level imports legitimately follow statements.
"src/dashboard/app.py" = ["E402"]
"src/dashboard/pages/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
